--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=Semsenha13
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -15,3 +15,5 @@ spring.jpa.defer-datasource-initialization=true
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+server.port=9090
