--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=mony
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mony_squad2
 spring.datasource.username=root
-spring.datasource.password=Semsenha13
+spring.datasource.password=Jolau2077$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.mode=never
