--- a/Acabou_o_Mony_Microsservice/contas-service/src/main/resources/application.properties
+++ b/Acabou_o_Mony_Microsservice/contas-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=contas-service
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mony_squad2
 spring.datasource.username=root
-spring.datasource.password=Jolau2077$
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.mode=never
@@ -15,5 +15,19 @@ spring.jpa.defer-datasource-initialization=true
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Mailtrap SMTP
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=2f1e77acf39634
+spring.mail.password=cf8735d58e7ffc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.port=9092
