--- a/Acabou_o_Mony_Microsservice/contas-service/src/main/resources/application.properties
+++ b/Acabou_o_Mony_Microsservice/contas-service/src/main/resources/application.properties
@@ -23,11 +23,13 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Mailtrap SMTP
-spring.mail.host=smtp.mailtrap.io
+spring.mail.host = "sandbox.smtp.mailtrap.io"
 spring.mail.port=2525
 spring.mail.username=2f1e77acf39634
 spring.mail.password=cf8735d58e7ffc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=noreply@meuprojeto.com
+
 
 server.port=9092
