--- a/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
+++ b/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
@@ -23,7 +23,11 @@
 		<java.version>17</java.version>
 	</properties>
 
-	<dependencies>
+	<dependencies>		<!-- RabbitMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 		<!-- Web starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,6 +63,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webflux</artifactId>
+		</dependency>
+
+		<!-- RabbitMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 	</dependencies>
 
