--- a/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
+++ b/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
@@ -23,11 +23,7 @@
 		<java.version>17</java.version>
 	</properties>
 
-	<dependencies>		<!-- RabbitMQ -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
+	<dependencies>
 		<!-- Web starter -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -64,13 +60,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webflux</artifactId>
 		</dependency>
-
-		<!-- RabbitMQ -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
