subindo meu servico atualizado

--- a/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
+++ b/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
@@ -67,7 +67,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
+            <artifactId>spring-amqp</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
