--- a/Acabou_o_Mony_Microsservice/produto-service/src/main/resources/application.properties
+++ b/Acabou_o_Mony_Microsservice/produto-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=produto-service
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mony_squad2
 spring.datasource.username=root
-spring.datasource.password=Semsenha13
+spring.datasource.password=Bibinhoz10$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.sql.init.mode=never
