--- a/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
+++ b/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
@@ -78,6 +78,25 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+		<!-- RabbitMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+		<!-- Envio de e-mails -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>contas.service</groupId>
+			<artifactId>contas-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+
     </dependencies>
 
 	<build>
