--- a/Acabou_o_Mony_Microsservice/transacao-service/src/main/resources/application.properties
+++ b/Acabou_o_Mony_Microsservice/transacao-service/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=transacao-service
 
 # Dados do banco MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/mony_squad2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Semsenha13
+spring.datasource.username=${USER_BANCO}
+spring.datasource.password=${PSWRD_BANCO}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuração da inicialização do banco (não executar scripts SQL automáticos)
