--- a/Acabou_o_Mony_Microsservice/pedido-service/pom.xml
+++ b/Acabou_o_Mony_Microsservice/pedido-service/pom.xml
@@ -92,9 +92,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>contas.service</groupId>
 			<artifactId>contas-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.acabou_o_mony</groupId>
+			<artifactId>produto-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>transacao-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
