--- a/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
+++ b/Acabou_o_Mony_Microsservice/transacao-service/pom.xml
@@ -104,6 +104,14 @@
 			<version>2.2.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>contas.service</groupId>
+			<artifactId>contas-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+
     </dependencies>
 
 	<build>
