--- a/Acabou_o_Mony_Microsservice/pedido-service/pom.xml
+++ b/Acabou_o_Mony_Microsservice/pedido-service/pom.xml
@@ -94,6 +94,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+
+
+		<dependency>
 			<groupId>contas.service</groupId>
 			<artifactId>contas-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
